# ship

./: CMakeLists.txt  Main.qml  Page.qml  main.cpp
